data/derived/sp14/progs/unify/prog2650.ml.out
Characters 155-159:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a list * 'b
       but an expression was expected of type 'c list
